# OpenGL_learning_game

./: .gitignore  CMakeLists.txt  CMakeProject1.cpp  glad.c
glad/: glad.h
shaders/: Basic.shader
src/: CMakeProject1.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
